// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Benchmark check console output(instrumented=false)  1`] = `
{
  "log": [],
  "warn": [
    [
      "[CodSpeed] bench detected but no instrumentation found, falling back to benchmark.js",
    ],
  ],
}
`;

exports[`Benchmark check console output(instrumented=true)  1`] = `
{
  "log": [
    [
      "    ✔ Measured packages/benchmark.js-plugin/tests/index.integ.test.ts::RegExpSingle",
    ],
    [
      "[CodSpeed] Done running 1 benches.",
    ],
  ],
  "warn": [],
}
`;

exports[`Benchmark.Suite check console output(instrumented=false)  1`] = `
{
  "log": [],
  "warn": [
    [
      "[CodSpeed] 2 benches detected but no instrumentation found, falling back to benchmark.js",
    ],
  ],
}
`;

exports[`Benchmark.Suite check console output(instrumented=true)  1`] = `
{
  "log": [
    [
      "    ✔ Measured packages/benchmark.js-plugin/tests/index.integ.test.ts::thesuite::RegExp",
    ],
    [
      "    ✔ Measured packages/benchmark.js-plugin/tests/index.integ.test.ts::thesuite::unknown_1",
    ],
    [
      "[CodSpeed] Done running 2 benches.",
    ],
  ],
  "warn": [],
}
`;
